# aoc2023

./: .gitignore
2023/1/: sol.py
2023/1/sol/src/: main.rs
2023/10/rustsol/src/: lib.rs  main.rs
2023/2/sol/: Cargo.toml
2023/2/sol/src/: lib.rs  main.rs
2023/3/rustsol/: Cargo.toml
2023/3/rustsol/src/: lib.rs  main.rs
2023/3/rustsol2/: Cargo.toml
2023/3/rustsol2/src/: main.rs
2023/4/rustsol/src/: main.rs
2023/5/rustsol/src/: main.rs
2023/6/: input-2.txt
2023/6/rustsol/src/: main.rs
2023/7/: expected2.txt  test2output.txt  test3.txt
2023/7/rustsol/: Cargo.toml
2023/7/rustsol/src/: main.rs
2023/8/rustsol/: Cargo.toml
2023/8/rustsol/src/: main.rs
2023/9/rustsol/src/: main.rs
2024/: pyproject.toml
2024/1/: main.py
2024/10/: main.py
2024/11/: main.py
2024/12/: main.py
2024/13/: main.py
2024/14/: main.py
2024/15/: main.py
2024/16/: main.py
2024/17/: input.txt  main.py
2024/18/: main.py
2024/19/: main.py
2024/2/: main.py
2024/20/: main.py
2024/21/: main.py
2024/22/: main.py
2024/23/: main.py
2024/24/: circuit_diagram  input2.txt  input3.txt  main.py  notes.txt  tt.py
2024/25/: main.py
2024/3/: main.py
2024/4/: main.py
2024/5/: main.py
2024/6/: main.py
2024/7/: main.py
2024/8/: main.py
2024/9/: main.py
