[project]
name = "aoc-2024"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.20.3",
    "ipython>=8.31.0",
    "mermaid-py>=0.7.0",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "memray>=1.15.0",
    "mypy>=1.13.0",
    "pyroscope-io>=0.8.8",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 120
